Desktop/cWorkSpace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:25:20 **** Incremental Build of configuration Debug for project 09_Library ****
Info: Internal Builder is used for build
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -o prime.o "..\\prime.cpp" 
..\prime.cpp: In function 'void primes(std::ostream&, int)':
..\prime.cpp:22:1: error: 'ios' has not been declared
 ios::fmtflags f(cout.flags());
 ^
..\prime.cpp:23:38: error: invalid operands of types 'const char*' and 'const char [16]' to binary 'operator+'
 out << "There are " + range.size() + " in the range: " number;
                                      ^
